User Schema Added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=JournalApp
 # ? MongoDB Configuration
 spring.data.mongodb.uri=mongodb+srv://kaushaltopusa:imKaushal5699@cluster101.bm6x1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster101
 spring.data.mongodb.database=JavaSpringAppDB
+spring.data.mongodb.auto-index-creation=true
 
 # ? PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/SpringStarter
